--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,10 @@
       "persistent": false
     },
     "browser_action": {
-      "default_title": "Make this page red"
-    },
+      "default_title": "Copy URL",
+      "default_icon": {
+        "64": "images/logo.png"
+    }
+  },
     "manifest_version": 2
   }
